[gd_scene load_steps=9 format=3 uid="uid://dg8hmfn6mfh2d"]

[ext_resource type="Script" path="res://tower_1.gd" id="1_undji"]
[ext_resource type="Script" path="res://objects/towers/tower_base_stats.gd" id="2_6nega"]
[ext_resource type="Texture2D" uid="uid://b8oosejb0lltw" path="res://tower art/towerDefense_tile249.png" id="2_40uvc"]
[ext_resource type="Script" path="res://objects/aimpoint.gd" id="3_rpv0c"]
[ext_resource type="Script" path="res://objects/Area2D.gd" id="3_u6dnr"]
[ext_resource type="PackedScene" uid="uid://vyt04mje2a5r" path="res://objects/radar_node.tscn" id="5_uq6kf"]

[sub_resource type="Resource" id="Resource_3hgp6"]
script = ExtResource("2_6nega")
cost = 0
radar_range = 2.0
fire_rate = 1.0
aim_time = 1.0
damage = 3
size = 64

[sub_resource type="CircleShape2D" id="CircleShape2D_jjja5"]
radius = 31.0

[node name="tower_node" type="Node2D"]
rotation = -1.5708
script = ExtResource("1_undji")
tower_base_stats = SubResource("Resource_3hgp6")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_40uvc")

[node name="aimpoint" type="Node2D" parent="."]
position = Vector2(23, 8.32598e-05)
script = ExtResource("3_rpv0c")

[node name="coldown" type="Timer" parent="aimpoint"]
wait_time = 1.232
one_shot = true

[node name="tower_ body" type="Area2D" parent="."]
script = ExtResource("3_u6dnr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower_ body"]
shape = SubResource("CircleShape2D_jjja5")

[node name="radar_node" parent="." instance=ExtResource("5_uq6kf")]

[connection signal="fire_is_allowed_by_tower" from="." to="aimpoint" method="_on_tower_node_fire_is_allowed_by_tower"]
[connection signal="timeout" from="aimpoint/coldown" to="aimpoint" method="_on_coldown_timeout"]
[connection signal="enemy_detected" from="radar_node" to="." method="_on_radar_node_enemy_detected"]
[connection signal="no_enemy_detected" from="radar_node" to="." method="_on_radar_node_no_enemy_detected"]
